--- a/BankingSystem.Core/BankingSystem.Core.csproj
+++ b/BankingSystem.Core/BankingSystem.Core.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Atm\" />
+    <Folder Include="Features\Internetbank\" />
+    <Folder Include="Features\Users\" />
+  </ItemGroup>
+
 </Project>
