Create Services Folder

--- a/BankingSystem.Core/BankingSystem.Core.csproj
+++ b/BankingSystem.Core/BankingSystem.Core.csproj
@@ -12,4 +12,8 @@
     <None Remove="Features\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
