Create Repositories And Inteface Folders

--- a/BankingSystem.Core/BankingSystem.Core.csproj
+++ b/BankingSystem.Core/BankingSystem.Core.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Repositories\Interfaces\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
