--- a/BankingSystem.DbMigration/appsettings.json
+++ b/BankingSystem.DbMigration/appsettings.json
@@ -1,4 +1,6 @@
 {
-  "Zangura": "Data Source=DESKTOP-7OLVUTI;Initial Catalog=BankingSystem_db;Integrated Security=SSPI;TrustServerCertificate=True",
-  "Irakli": "Data Source=DESKTOP-1A48JD4;Initial Catalog=BankingSystem_db;Integrated Security=SSPI;TrustServerCertificate=True"
+  "ConnectionStrings": {
+    "Zangura": "Data Source=DESKTOP-7OLVUTI;Integrated Security=SSPI;TrustServerCertificate=True",
+    "Irali": "Data Source=DESKTOP-1A48JD4;Integrated Security=SSPI;TrustServerCertificate=True"
+  }
 }
