--- a/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
+++ b/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
@@ -9,10 +9,12 @@
 
   <ItemGroup>
     <None Remove="scripts\Script001 - CreateDatabase.sql" />
+    <None Remove="scripts\Script002-CreateOperatorTable.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="scripts\Script001 - CreateDatabase.sql" />
+    <EmbeddedResource Include="scripts\Script002-CreateOperatorTable.sql" />
   </ItemGroup>
 
   <ItemGroup>
