--- a/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
+++ b/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
@@ -10,11 +10,13 @@
   <ItemGroup>
     <None Remove="scripts\Script001 - CreateDatabase.sql" />
     <None Remove="scripts\Script002-CreateOperatorTable.sql" />
+    <None Remove="scripts\Script003 - InsertOperator.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="scripts\Script001 - CreateDatabase.sql" />
     <EmbeddedResource Include="scripts\Script002-CreateOperatorTable.sql" />
+    <EmbeddedResource Include="scripts\Script003 - InsertOperator.sql" />
   </ItemGroup>
 
   <ItemGroup>
