--- a/BankingSystem.DbMigration/appsettings.json
+++ b/BankingSystem.DbMigration/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Zangura": "Data Source=DESKTOP-7OLVUTI;Integrated Security=SSPI;TrustServerCertificate=True",
-    "Irali": "Data Source=DESKTOP-1A48JD4;Integrated Security=SSPI;TrustServerCertificate=True"
+    "Zangura": "Data Source=DESKTOP-7OLVUTI;Database=BankingSystem_db;Integrated Security=SSPI;TrustServerCertificate=True",
+    "Irali": "Data Source=DESKTOP-1A48JD4;Database=BankingSystem_db;Integrated Security=SSPI;TrustServerCertificate=True"
   }
 }
