add entity framework and jwtTokenGenerator

--- a/BankingSystem.Api/appsettings.json
+++ b/BankingSystem.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Zangura": "Data Source=DESKTOP-7OLVUTI;Database=BankingSystem_db;Integrated Security=SSPI;TrustServerCertificate=True",
+    "Irakli": "Data Source=DESKTOP-1A48JD4;Database=BankingSystem_db;Integrated Security=SSPI;TrustServerCertificate=True"
+  },
+  "JwtTokenSecretKey": "asdasdasdasdjadasjlsajdasjdlksajdaslkasdasdasdasdasd"
 }
