--- a/BankingSystem.Api/BankingSystem.Api.csproj
+++ b/BankingSystem.Api/BankingSystem.Api.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="dbup" Version="5.0.40" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
