--- a/BankingSystem.Core/BankingSystem.Core.csproj
+++ b/BankingSystem.Core/BankingSystem.Core.csproj
@@ -33,4 +33,8 @@
     <ProjectReference Include="..\BankingSystem.DbMigration\BankingSystem.DbMigration.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
