--- a/BankingSystem.Core/BankingSystem.Core.csproj
+++ b/BankingSystem.Core/BankingSystem.Core.csproj
@@ -7,15 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Features\**" />
-    <Compile Remove="Repositories\Interfaces\**" />
-    <EmbeddedResource Remove="Features\**" />
-    <EmbeddedResource Remove="Repositories\Interfaces\**" />
-    <None Remove="Features\**" />
-    <None Remove="Repositories\Interfaces\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.28" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.16" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.5" />
@@ -31,6 +22,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BankingSystem.DbMigration\BankingSystem.DbMigration.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\Atm\CardAuthorization\" />
+    <Folder Include="Features\Atm\ChangePin\" />
+    <Folder Include="Features\Atm\WithdrawMoney\" />
+    <Folder Include="Features\Atm\ViewBalance\" />
+    <Folder Include="Features\Reports\" />
   </ItemGroup>
 
 </Project>
