--- a/BankingSystem.Core/BankingSystem.Core.csproj
+++ b/BankingSystem.Core/BankingSystem.Core.csproj
@@ -29,6 +29,7 @@
     <Folder Include="Features\Atm\ChangePin\" />
     <Folder Include="Features\Atm\WithdrawMoney\" />
     <Folder Include="Features\Atm\ViewBalance\" />
+    <Folder Include="Features\Cards\NewFolder\CreateCard\" />
     <Folder Include="Features\Reports\" />
   </ItemGroup>
 
