--- a/BankingSystem.Core/BankingSystem.Core.csproj
+++ b/BankingSystem.Core/BankingSystem.Core.csproj
@@ -30,6 +30,8 @@
     <Folder Include="Features\Atm\WithdrawMoney\" />
     <Folder Include="Features\Atm\ViewBalance\" />
     <Folder Include="Features\Reports\" />
+    <Folder Include="Features\Transactions\TransactionRepository\" />
+    <Folder Include="Features\Transactions\TransactionService\" />
   </ItemGroup>
 
 </Project>
