remove data.sqlClient, install microsoft.data.sqlClient configured connectionString

--- a/BankingSystem.Api/appsettings.json
+++ b/BankingSystem.Api/appsettings.json
@@ -6,9 +6,9 @@
         }
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "Zangura": "Data Source=DESKTOP-7OLVUTI;Database=BankingSystem_db;Integrated Security=SSPI;TrustServerCertificate=True",
-        "Irakli": "Data Source=DESKTOP-1A48JD4;Database=BankingSystem_db;Integrated Security=SSPI;TrustServerCertificate=True"
-    },
+  "ConnectionStrings": {
+    "vzanguri": "Data Source=LKSP10085991;Database=BankingSystem_db;Integrated Security=SSPI;TrustServerCertificate=True",
+    "Irakli": "Data Source=DESKTOP-1A48JD4;Database=BankingSystem_db;Integrated Security=SSPI;TrustServerCertificate=True"
+  },
     "JwtTokenSecretKey": "asdasdasdasdjadasjlsajdasjdlksajdaslkasdasdasdasdasd"
 }
