--- a/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
+++ b/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
@@ -13,7 +13,8 @@
     <None Remove="Scripts\Script002 - CreateBankAccounstTable.sql" />
     <None Remove="scripts\Script003 - CreateCardTable.sql" />
     <None Remove="scripts\Script004 - CreateTransactionsTable.sql" />
-    <None Remove="scripts\Scritp005 - CreateTableDeposits.sql" />
+    <None Remove="scripts\Script005 - CreateTableDeposits.sql" />
+    <None Remove="Scripts\Script006 - CreateTableCurrencies.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,7 +30,10 @@
     <EmbeddedResource Include="scripts\Script004 - CreateTransactionsTable.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="scripts\Scritp005 - CreateTableDeposits.sql">
+    <EmbeddedResource Include="scripts\Script005 - CreateTableDeposits.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Scripts\Script006 - CreateTableCurrencies.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
