--- a/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
+++ b/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
@@ -17,6 +17,7 @@
     <None Remove="Scripts\Script006 - CreateTableCurrencies.sql" />
     <None Remove="Scripts\Script007 - InsertIntoCurrencies.sql" />
     <None Remove="scripts\Script008 -  CreateAuthorizationAttemptsTable.sql" />
+    <None Remove="scripts\Script009 -  CreateChangePinAttemptsTable.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,6 +37,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Scripts\Script006 - CreateTableCurrencies.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="scripts\Script009 -  CreateChangePinAttemptsTable.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="scripts\Script008 -  CreateAuthorizationAttemptsTable.sql">
