Refactor Existing Code

--- a/BankingSystem.Core/BankingSystem.Core.csproj
+++ b/BankingSystem.Core/BankingSystem.Core.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Atm\WithdrawMoney\" />
+    <Folder Include="Features\Atm\WithdrawMoney\Dto%27s\" />
     <Folder Include="Features\Reports\" />
   </ItemGroup>
 
