Add Reports Folder and Other Required Files

--- a/BankingSystem.Core/BankingSystem.Core.csproj
+++ b/BankingSystem.Core/BankingSystem.Core.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Reports\" />
+    <Folder Include="Features\Reports\Dto%27s\" />
   </ItemGroup>
 
 </Project>
