--- a/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
+++ b/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
@@ -10,13 +10,12 @@
   <ItemGroup>
     <None Remove="scripts\.sql" />
     <None Remove="scripts\Script001 - CreateDatabase.sql" />
-    <None Remove="scripts\Script003 - CreateCardssTable.sql" />
+    <None Remove="scripts\Script003 - CreateCardsTable.sql" />
     <None Remove="scripts\Script004 - CreateTransactionsTable.sql" />
     <None Remove="scripts\Script005 - CreateTableDeposits.sql" />
     <None Remove="Scripts\Script006 - CreateTableCurrencies.sql" />
     <None Remove="Scripts\Script007 - InsertIntoCurrencies.sql" />
     <None Remove="scripts\Script008 -  CreateAuthorizationAttemptsTable.sql" />
-    <None Remove="scripts\Script009 -  CreateChangePinsAttemptsTable.sql" />
     <None Remove="Scripts\Script010 -  CreateViewBalanceTable.sql" />
     <None Remove="scripts\Script011 -  CreateDailyWithdrawalTable.sql" />
   </ItemGroup>
@@ -25,7 +24,7 @@
     <EmbeddedResource Include="scripts\Script001 - CreateDatabase.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="scripts\Script003 - CreateCardssTable.sql">
+    <EmbeddedResource Include="scripts\Script003 - CreateCardsTable.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="scripts\Script004 - CreateTransactionsTable.sql">
@@ -41,9 +40,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Scripts\Script010 -  CreateViewBalanceTable.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="scripts\Script009 -  CreateChangePinsAttemptsTable.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="scripts\Script008 -  CreateAuthorizationAttemptsTable.sql">
