add middlewares folder

--- a/BankingSystem.Api/BankingSystem.Api.csproj
+++ b/BankingSystem.Api/BankingSystem.Api.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\BankingSystem.Core\BankingSystem.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Middlewares\" />
+  </ItemGroup>
+
 </Project>
