configure DailyWithdrawals table and reports

--- a/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
+++ b/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
@@ -18,6 +18,7 @@
     <None Remove="scripts\Script008 -  CreateAuthorizationAttemptsTable.sql" />
     <None Remove="Scripts\Script010 -  CreateViewBalanceTable.sql" />
     <None Remove="scripts\Script011 -  CreateDailyWithdrawalTable.sql" />
+    <None Remove="Scripts\Script012 - AlterTableDailyWidhtrawal.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,6 +47,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Scripts\Script007 - InsertIntoCurrencies.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Scripts\Script012 - AlterTableDailyWidhtrawal.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
