--- a/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
+++ b/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
@@ -20,6 +20,7 @@
     <None Remove="scripts\Script011 -  CreateDailyWithdrawalTable.sql" />
     <None Remove="Scripts\Script012 - AlterTableDailyWidhtrawal.sql" />
     <None Remove="Scripts\Script013 - AlterTransactionsTable.sql" />
+    <None Remove="Scripts\Script014-UpdateTransactionTableColumnsToNullable.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -54,6 +55,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Scripts\Script013 - AlterTransactionsTable.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Scripts\Script014-UpdateTransactionTableColumnsToNullable.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
