--- a/BankingSystem.Core/BankingSystem.Core.csproj
+++ b/BankingSystem.Core/BankingSystem.Core.csproj
@@ -16,6 +16,8 @@
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.15" />
 	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
 	<PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.3.0" />
+	<PackageReference Include="Serilog" Version="3.1.1" />
+	<PackageReference Include="Serilog.Sinks.Seq" Version="7.0.0" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.0" />
   </ItemGroup>
