Refactor Transaction/Validators Folder and also add Modelfactory implementation

--- a/BankingSystem.Test/BankingSystem.Test.csproj
+++ b/BankingSystem.Test/BankingSystem.Test.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Fakes\" />
+    <Folder Include="Transactions\InternalTransaction\" />
   </ItemGroup>
 
   <ItemGroup>
