--- a/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
+++ b/BankingSystem.DbMigration/BankingSystem.DbMigration.csproj
@@ -21,6 +21,7 @@
     <None Remove="Scripts\Script012 - AlterTableDailyWidhtrawal.sql" />
     <None Remove="Scripts\Script013 - AlterTransactionsTable.sql" />
     <None Remove="Scripts\Script014-UpdateTransactionTableColumnsToNullable.sql" />
+    <None Remove="Scripts\Script015 - AlterCardTableColumn.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -58,6 +59,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Scripts\Script014-UpdateTransactionTableColumnsToNullable.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Scripts\Script015 - AlterCardTableColumn.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
