--- a/BankingSystem.Core/BankingSystem.Core.csproj
+++ b/BankingSystem.Core/BankingSystem.Core.csproj
@@ -18,6 +18,7 @@
 	<PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.3.0" />
 	<PackageReference Include="Serilog" Version="3.1.1" />
 	<PackageReference Include="Serilog.Sinks.Seq" Version="7.0.0" />
+	<PackageReference Include="SshNet.Security.Cryptography" Version="1.3.0" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.0" />
   </ItemGroup>
@@ -28,7 +29,6 @@
 
   <ItemGroup>
     <Folder Include="Features\BankAccounts\Requests\" />
-    <Folder Include="Features\Cards\CreateCard\Models\Response\" />
     <Folder Include="Features\Transactions\InternalTransaction\Requests\" />
     <Folder Include="Features\Transactions\ExternalTransaction\Requests\" />
     <Folder Include="Features\Transactions\WithdrawalTransaction\Requests\" />
